[package]
name = "stracciatella"
version = "0.1.0"
authors = ["Stefan Lau <github@stefanlau.com>"]
edition = "2018"
workspace = ".."

[lib]
crate-type = ["rlib"]
name = "stracciatella"
path = "src/stracciatella.rs"

[dependencies]
getopts = "0.2"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = { version = "1", features = ["preserve_order"] }
json_comments = "0.2"
dirs = "4.0"
byteorder = "1.4"
hex = "0.4"
digest = "0.9"
md-5 = "0.9"
unicode-normalization = "0.1"
caseless = "0.2"
log = "0.4"
lru = "0.7"
rayon = "1.5"
dunce = "1"
remove_dir_all = "0.7"
tempfile = "3.2"

[target.'cfg(not(target_os = "android"))'.dependencies.simplelog]
version = "0.10"

[target.'cfg(windows)'.dependencies.winapi]
# @see stracciatella::fs::free_space
version = "0.3"
features = ["std", "fileapi"]

[target.'cfg(target_os = "android")'.dependencies.android_logger]
version = "0.10"
[target.'cfg(target_os = "android")'.dependencies.lazy_static]
version = "1.4"
[target.'cfg(target_os = "android")'.dependencies.jni]
version = "0.14"
[target.'cfg(target_os = "android")'.dependencies.ndk]
git = "https://github.com/selaux/android-ndk-rs"
[target.'cfg(target_os = "android")'.dependencies.ndk-sys]
git = "https://github.com/selaux/android-ndk-rs"

[dev-dependencies]
regex = "1.5"

