[package]
name = "stracciatella"
version = "0.1.0"
authors = ["Stefan Lau <github@stefanlau.com>"]
edition = "2021"
workspace = ".."

[lib]
crate-type = ["rlib"]
name = "stracciatella"
path = "src/stracciatella.rs"

[dependencies]
bitflags = "1.3"
getopts = "0.2"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = { version = "1", features = ["preserve_order"] }
json_comments = "0.2"
dirs = "4.0"
byteorder = "1.4"
hex = "0.4"
digest = "0.10"
md-5 = "0.10"
unicode-normalization = "0.1"
caseless = "0.2"
log = "0.4"
lru = "0.8"
rayon = "1.6"
dunce = "1.0"
regex = "1.7"
remove_dir_all = "0.7"
tempfile = "3.3"
slug = "0.1.4"

[target.'cfg(not(target_os = "android"))'.dependencies.simplelog]
version = "0.12"

[target.'cfg(windows)'.dependencies.winapi]
# @see stracciatella::fs::free_space
version = "0.3"
features = ["std", "fileapi"]

[target.'cfg(target_os = "android")'.dependencies.send_wrapper]
version = "0.6"
[target.'cfg(target_os = "android")'.dependencies.android_logger]
version = "0.11"
[target.'cfg(target_os = "android")'.dependencies.lazy_static]
version = "1.4"
[target.'cfg(target_os = "android")'.dependencies.jni]
version = "0.19"
[target.'cfg(target_os = "android")'.dependencies.jni-sys]
version = "0.3"
[target.'cfg(target_os = "android")'.dependencies.ndk]
version = "0.7"
[target.'cfg(target_os = "android")'.dependencies.ndk-sys]
version = "0.4"

[build-dependencies]
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
