[package]
name = "stracciatella_c_api"
version = "0.1.0"
authors = ["Stefan Lau <github@stefanlau.com>"]
edition = "2021"
workspace = ".."

[lib]
crate-type = ["staticlib"]

[dependencies]
byteorder = "1.4"
hex = "0.4"
libc = "0.2"
log = "0.4"
stracciatella = { path = "../stracciatella" }
tempfile = "3.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
json-patch = "2.0.0"

[target.'cfg(target_os = "android")'.dependencies.jni]
version = "0.14"

[build-dependencies]
cbindgen = "0.20"
